drive api routing from swagger.json
