# api/api/registry/index.js
@@ -1,12 +1,0 @@
-'use strict';
-
-const express = require('express');
-
-const controller = require('./registry.controller');
-
-var router = new express.Router();
-
-router.post('/user-profile', controller.createProfile);
-router.get('/user-profile/:name', controller.getProfile);
-
-module.exports = router;
