# api/api/user/index.js
@@ -1,12 +1,0 @@
-'use strict';
-
-const express = require('express');
-
-const controller = require('./user.controller');
-
-var router = new express.Router();
-
-router.get('/me', controller.showCurrentUser);
-router.post('/', controller.createNewUser);
-
-module.exports = router;
